<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:scrollbars="vertical"
    tools:context=".ui.perfil.PerfilFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_menu_camera" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_perfil"
                android:textAppearance="?attr/textAppearanceHeadline6"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/perfil_nombre"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"/>

            <EditText
                android:id="@+id/perfil_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/perfil_hint_nombre"
                android:inputType="textPersonName"
                android:enabled="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/perfil_apellido"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"/>

            <EditText
                android:id="@+id/perfil_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/perfil_hint_apellido"
                android:inputType="textPersonName"
                android:enabled="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/perfil_nro"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"/>

            <EditText
                android:id="@+id/perfil_nro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/perfil_hint_nro"
                android:enabled="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/perfil_mail"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"/>

            <EditText
                android:id="@+id/perfil_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/perfil_hint_mail"
                android:inputType="textEmailAddress"
                android:enabled="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/perfil_pass"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"/>

            <EditText
                android:id="@+id/perfil_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/perfil_hint_pass"
                android:inputType="textPassword"
                android:enabled="false"/>

        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/action_1"
                style="?attr/borderlessButtonStyle"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/action_2"
                android:textColor="@color/design_default_color_error"
                style="?attr/borderlessButtonStyle"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</com.google.android.material.card.MaterialCardView>

